--- a/littleGame/style.css
+++ b/littleGame/style.css
@@ -3,7 +3,7 @@
     width: 300px;
     height: 200px;
     border-radius: 30%;
-    background-image: url('http://www.hi-mike.com/img/logo.png');
+    background-image: url('logo.png');
     background-size: cover;
   }
   
